Fixed spacing

--- a/login_styles/login.css
+++ b/login_styles/login.css
@@ -102,6 +102,7 @@ top: 3px;
 }
 .bold {
     font-weight: bold;
+    margin-left: 15px;
 }
 .submit {
    text-align: center;
